--- a/src/app/components/auth/forgot-password/forgot-password.component.html
+++ b/src/app/components/auth/forgot-password/forgot-password.component.html
@@ -6,14 +6,15 @@
         <div class="signup-box-wrapper">
         <h3>Reset Password</h3>
           <div class="form-group mb-3">
-            <input type="password" formControlName="password" class="form-control" placeholder="Password *"
+            <span class="show-pwd" (click)="showHidePassword()"><i [className]="showPassword ?  'far fa-eye-slash' : 'far fa-eye'"></i></span>
+            <input [type]="showPassword ? 'text': 'password'" formControlName="password" class="form-control" placeholder="Password *"
               [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
             <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
               <div *ngIf="f.password.errors.required">Password is required</div>
               <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
             </div>
           </div>
-          <div class="form-group mb-3">
+          <div class="form-group mb-3">           
             <input type="password" formControlName="confirmPassword" class="form-control" placeholder="Verify Password *"
               [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
             <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
