--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -48,7 +48,7 @@
         <owl-carousel-o [options]="bestsellers">
           <ng-template carouselSlide>
             <div class="seller-wrapper">
-              <a [routerLink]="['/store']"><img src="../../../assets/best-seller-img1.png"/></a>
+              <img src="../../../assets/best-seller-img1.png"/>
               <div class="content-info-image">
                 <h4>Kids Sleep Melts 30-Count</h4>
                 <p class="price-seller">$24.99</p>
@@ -57,7 +57,7 @@
           </ng-template>
           <ng-template carouselSlide>
             <div class="seller-wrapper">
-              <a [routerLink]="['/store']"><img src="../../../assets/best-seller-img2.png"/></a>
+             <img src="../../../assets/best-seller-img2.png"/>
               <div class="content-info-image">
                 <h4>Cool Gums Teething Gel</h4>
                 <p class="price-seller">$17.99</p>
@@ -66,7 +66,7 @@
           </ng-template>
           <ng-template carouselSlide>
             <div class="seller-wrapper">
-              <a [routerLink]="['/store']"><img src="../../../assets/best-seller-img3.png"/></a>
+              <img src="../../../assets/best-seller-img3.png"/>
               <div class="content-info-image">
                 <h4>Pre & Pro Biotic 30-Count</h4>
                 <p class="price-seller">$24.99</p>
@@ -75,7 +75,7 @@
           </ng-template>
           <ng-template carouselSlide>
             <div class="seller-wrapper">
-              <a [routerLink]="['/store']"><img src="../../../assets/best-seller-img4.png"/></a>
+             <img src="../../../assets/best-seller-img4.png"/>
               <div class="content-info-image">
                 <h4>Multi-Collagen Protein Powder</h4>
                 <p class="price-seller">$44.99</p>
