--- a/src/app/components/store/product-detail/product-detail.component.html
+++ b/src/app/components/store/product-detail/product-detail.component.html
@@ -245,7 +245,7 @@
                               </div>
                           </div>
                                   <div class="cart-btn">
-                                      <button type="submit" (click)="addToCart(product)" class="btn btn-cart">${{productDetail.price}}</button>
+                                      <button type="submit" (click)="addToCart(product)" class="btn btn-cart">${{productDetail.price}} ADD</button>
                                   </div>
                       </div>
                   </div>
