--- a/src/app/components/auth/forgot-password/forgot-password.component.css
+++ b/src/app/components/auth/forgot-password/forgot-password.component.css
@@ -20,9 +20,14 @@ span.show-pwd {
   }
   
   section.form-reset-pwd form {
-      max-width: 400px;
-      margin: 0 auto;
-      text-align: center;
+    max-width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #fff;
+    padding: 30px 35px 22px;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 16%);
+    margin-bottom: 30px;
   }
   
   section.form-reset-pwd form h3 {
