change-new cloned-ui_sep16

--- a/src/app/components/auth/forgot-password/forgot-password.component.css
+++ b/src/app/components/auth/forgot-password/forgot-password.component.css
@@ -1,56 +1,61 @@
 span.show-pwd {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-  }
-  
-  .pwd-field {
-      position: relative;
-  }
-  
-  span.show-pwd i {
-      font-size: 22px;
-      cursor: pointer;
-  }
+    position: absolute;
+    top: 20px;
+    right: 30px;
+}
+
+.pwd-field {
+    position: relative;
+}
+
+span.show-pwd i {
+    font-size: 22px;
+    cursor: pointer;
+}
 
 
-  section.form-reset-pwd {
-      padding: 60px 0 60px;
-      width: 100%;
-  }
-  
-  section.form-reset-pwd form {
-      max-width: 400px;
-      margin: 0 auto;
-      text-align: center;
-  }
-  
-  section.form-reset-pwd form h3 {
-      text-align: center;
-      margin: 0 auto 20px;
-      font-size: 24px;
-  }
-  
-  section.form-reset-pwd form .form-group {
-      position: relative;
-  }
-  
-  section.form-reset-pwd form .form-group span.show-pwd {
-      right: 12px;
-      top: 12px;
-  }
-  
-  section.form-reset-pwd form .form-group span.show-pwd i {
-      font-size: 18px;
-  }
-  
-  section.form-reset-pwd form button {
-      max-width: 246px;
-      margin: 0 auto 20px;
-      border-radius: 50px;
-      font-family: g-demibold;
-      font-size: 16px;
-      border: 1px solid #1cb1c5;
-      background-color: #1cb1c5;
-      padding: 7px 28px;
-  }
+section.form-reset-pwd {
+    padding: 60px 0 60px;
+    width: 100%;
+}
+
+section.form-reset-pwd form {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #fff;
+  padding: 30px 35px 22px;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 16%);
+  margin-bottom: 30px;
+}
+
+section.form-reset-pwd form h3 {
+    text-align: center;
+    margin: 0 auto 20px;
+    font-size: 24px;
+}
+
+section.form-reset-pwd form .form-group {
+    position: relative;
+}
+
+section.form-reset-pwd form .form-group span.show-pwd {
+    right: 12px;
+    top: 12px;
+}
+
+section.form-reset-pwd form .form-group span.show-pwd i {
+    font-size: 18px;
+}
+
+section.form-reset-pwd form button {
+    max-width: 246px;
+    margin: 0 auto 20px;
+    border-radius: 50px;
+    font-family: g-demibold;
+    font-size: 16px;
+    border: 1px solid #1cb1c5;
+    background-color: #1cb1c5;
+    padding: 7px 28px;
+}
