--- a/src/app/components/store/shop/shop.component.html
+++ b/src/app/components/store/shop/shop.component.html
@@ -43,10 +43,10 @@
           </svg>
         </i>
         <select class="form-control" (change)="onProductFilter($event)">
-          <option  [value]="">Featured</option>
-          <option  [value]="1">Price: $ - $$</option>
-          <option  [value]="2">Price: $$ - $</option>
-          <option  [value]="3">Name: A - Z</option>
+          <option  [value]="1">Featured</option>
+          <option  [value]="2">Price: $ - $$</option>
+          <option  [value]="3">Price: $$ - $</option>
+          <option  [value]="4">Name: A - Z</option>
         </select>
       </div>
     </form>
