--- a/src/app/components/store/checkout/checkout.component.css
+++ b/src/app/components/store/checkout/checkout.component.css
@@ -22,6 +22,17 @@ section.backlink-header .back-link a svg {
     max-width: 100%;
 }
 
+.referrer_modal button.close {
+    position: absolute;
+    right: 11px;
+    top: 4px;
+}
+
+.referrer_modal button.close span {
+    font-size: 45px;
+    line-height: 28px;
+}
+
 .grid-box-shadow
 {
     background-color: #fff;
