--- a/src/app/components/store/product-detail/product-detail.component.html
+++ b/src/app/components/store/product-detail/product-detail.component.html
@@ -4,8 +4,8 @@
           <div class="col-md-12">
               <ul class="breadcrumb">
                   <li><a [routerLink]="['/store']">Shop</a></li>/
-                  <li><a href="#">Sleep</a></li>/
-                  <li>Sleep</li>
+                  <li><a [routerLink]="['/store']">All Products</a></li>/
+                  <li>{{itemCodeTitle}}</li>
               </ul>
           </div>
       </div>
