--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -11,7 +11,6 @@
       </button>
       <div id="main-menu" class="show-mob">
         <ul class="right-menu ">
-        <li><a href="#"><i class="fa fa-search"></i></a></li>
        <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
        </ul>
       </div>
@@ -47,7 +46,13 @@
               src="../../assets/logo-wink.png" /></a>
         </div>
         <ul class="right-menu">
-          <li><a href="#"><i class="fa fa-search"></i></a></li>
+          <li>
+            <div class="searchOptions">
+              <input class="form-control" type="text" [(ngModel)]="searchText"   name="search"/>
+          <button type="submit" class="search-ico" (click)="searchProduct()">
+            <i class="fa fa-search"></i>
+          </button>
+            </div></li>
           <li class="cart-item"><a [routerLink]="['/store/cart']"><i class="fa fa-shopping-bag"></i><span *ngIf="cartItems" class="cart-info">{{cartItems}}</span></a></li>
           <li *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links">SIGN IN</a></li>
           <li *ngIf="user"><a (click)="logout()" class="log-links">Log out</a></li>
@@ -69,6 +74,13 @@
           </li>
          <li class="nav-item" *ngIf="!user"><a [routerLink]="['/sign-in']" class="log-links nav-link">SIGN IN</a></li>
          <li class="nav-item" *ngIf="user"><a (click)="logout()" class="log-links nav-link">Log out</a></li>
+         <li class="nav-item mob-search">
+          <div class="searchOptions">
+            <input class="form-control" type="text"   [(ngModel)]="searchText" name="search"/>
+        <button type="submit" class="search-ico" (click)="searchProduct()">
+          <i class="fa fa-search"></i>
+        </button>
+          </div></li>
         </ul>
         <div class="logo-center">
           <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img
